# git-remote-s3

./: .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: release.yaml  test.yml
src/: common.rs  errors.rs  git.rs  git_s3.rs  gpg.rs  lib.rs  log.rs  main.rs  s3.rs
tests/: common.rs  git_test.rs  gpg_test.rs  main_test.rs  main_test_aws.rs  s3_test.rs
