[package]
name = "git-remote-s3"
version = "0.1.5"
authors = ["Daniel Fu <daniel.fu@mongodb.com>"]
edition = "2018"
description = "A git remote helper for S3"
license = "Apache-2.0"
repository = "https://github.com/dyno/git-remote-s3"
readme = "README.md"
keywords = ["git", "s3"]
categories = [ "command-line-utilities", "development-tools" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
error-chain = "0.12.4"
itertools = "0.10.5"
tempfile = "3.3.0"
aws-config = "0.55"
aws-sdk-s3 = "0.28"
tokio = { version = "1.0", features = ["full"] }
log = "0.4"
env_logger = "0.10"

[dev-dependencies]
assert_cmd = "1.0"
tokio = { version = "1.0", features = ["full", "test-util"] }
