[package]
name = "git-remote-s3"
version = "0.1.4"
authors = ["Dario Nieuwenhuis <dirbaio@dirbaio.net>"]
description = "Git remote helper for S3"
repository = "https://github.com/bgahagan/git-remote-s3"
license = "MIT"
edition = "2018"
keywords = ["git", "s3"]
categories = [ "command-line-utilities", "development-tools" ]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
error-chain = "0.12.1"
itertools = "0.8.2"
tempfile = "3.1.0"
aws-config = "0.56"
aws-sdk-s3 = "0.34"
aws-types = "0.56"
aws-smithy-runtime = { version = "0.56", features = ["test-util"] }
aws-smithy-types = "0.56"
tokio = { version = "1.0", features = ["rt-multi-thread"] }

[dev-dependencies]
assert_cmd = "0.11"
tokio = { version = "1.32", features = ["full", "test-util"] }
