[package]
name = "git-remote-s3"
version = "0.2.1"
authors = ["Dyno Fu <dyno.fu@gmail.com>"]
description = "Git remote helper for S3"
repository = "https://github.com/dyno/git-remote-s3"
license = "MIT"
edition = "2021"
keywords = ["git", "s3"]
categories = [ "command-line-utilities", "development-tools" ]
readme = "README.md"

[[bin]]
name = "git-remote-s3"
path = "src/main.rs"

[lib]
name = "git_remote_s3"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
aws-config = "0.56"
aws-sdk-s3 = "0.30"
aws-types = "0.56"
bytes = "1.4"
futures = "0.3"
tokio = { version = "1.32", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "time"] }
time = { version = "0.3", features = ["macros", "formatting", "local-offset"] }

[dev-dependencies]
assert_cmd = "0.11"
tokio = { version = "1.32", features = ["full", "test-util"] }
tempfile = "3.8"
